Generate certs,vend JWT
